--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,10 @@
   -->
 
 <resources>
-    <string name="app_name">Songs</string>
+    <string name="app_name">LOL Worlds</string>
     <string name="title_song_detail">Song Detail</string>
-    <string name="article_title">Beatles Anthology Vol. 1</string>
-    <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
+    <string name="article_title">LOL World Champions</string>
+    <string name="article_subtitle">All Worlds Winners in the History of League of Legends.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
