Add team icons and display them in detail view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,8 @@
     <!-- Text for the fragment. -->
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="yes_message">ARTICLE: Like</string>
-    <string name="no_message">ARTICLE: Thanks</string>
+    <string name="yes_message">ARTICLE: Thanks</string>
+    <string name="no_message">ARTICLE: Sorry</string>
     <string name="question_article">LIKE THE ARTICLE?</string>
 
     <!-- Text for the button in FragmentExample2. -->
